--- a/src/resources/views/admin/me/stored-products.hbs
+++ b/src/resources/views/admin/me/stored-products.hbs
@@ -85,7 +85,7 @@
         {{else}}
           <tr>
             <td colspan="5" class="text-center">Bạn chưa đăng sản phẩm nào.
-              <a href="/products/create">Đăng sản phẩm</a>
+              <a href="/admin/products/create">Đăng sản phẩm</a>
             </td>
           </tr>
         {{/each}}
