--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -20,10 +20,10 @@
       referrerpolicy="no-referrer"
     />
     {{! Link Css }}
-    <link rel="stylesheet" src="css/app.css" />
+    <link rel="stylesheet" src="/css/app.css" />
   </head>
   <body>
-    <div class="app">
+    <div class="app" style="background-color: #ecf1f7;">
       <header>
         {{> header}}
       </header>
