--- a/src/resources/views/index.hbs
+++ b/src/resources/views/index.hbs
@@ -1,46 +1,57 @@
 <div class="container">
-  <div class="mt-4">
-    <div class="row mb-5">
+  <div class="mt-4 mb-5">
+    <div class="row">
       {{#each products}}
         <div
           class="col-lg-3 mb-3 pagination pagination-circle justify-content-center"
         >
           <div class="card">
-            <div class="card-image">
+            <div
+              class="card-image p-4 bg-image hover-overlay hover-zoom hover-shadow ripple"
+            >
               <a
                 href="admin/products/{{this.slug}}"
                 class="d-block rounded-lg lift lift-lg"
               >
                 <img
-                  class="card-img-top img-fluid rounded-lg"
+                  class="img-fluid rounded-lg"
                   src="{{this.image}}"
                   alt="{{this.image}}"
                 />
+                <a href="#!">
+                  <div
+                    class="mask"
+                    style="background-color: hsla(195, 83%, 58%, 0.2)"
+                  ></div>
+                </a>
               </a>
             </div>
-            <div class="card-body card lift h-100">
+            <div class="card-body card">
               <a href="admin/products/{{this.slug}}">
-                <h5 class="card-title">{{this.name}}</h5>
+                <h5 class="card-title text-truncate">{{this.name}}</h5>
               </a>
               <p class="card-text text-truncate">{{this.description}}</p>
-              <p class="card-text text-truncate">{{this.price}}</p>
+              <p class="card-text text-danger text-right">{{this.price}} đ</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">Mua sản phẩm</a>
+              <button href="#" class="btn btn-primary bg-danger border-0">Mua
+                sản phẩm</button>
             </div>
           </div>
         </div>
+
       {{/each}}
     </div>
 
   </div>
-  <div class="container">
-    <div class="category">
-      <ul class="list-category">
-        {{#each categories}}
-          <a href=""><li>{{this.nameCategory}}</li></a>
-        {{/each}}
-      </ul>
+  {{! Phần banner }}
+  <div class="slider-banner-wrap">
+    <div class="slider-banner-box">
+      <div data-x="0" data-y="0" data-width="24" data-height="1" class="item">
+        <img src="/image/baner.jpg" alt="" />
+      </div>
     </div>
   </div>
+  {{! Phần end-banner }}
+
 </div>
