--- a/src/resources/views/partials/footer.hbs
+++ b/src/resources/views/partials/footer.hbs
@@ -1,27 +1,12 @@
 <footer id="footer " class="bg-dark pt-5">
   <style>
-    div.text-white>h3,h4{ margin-bottom: 30px; } ul.text-white{ list-style:
-    none;margin-left: -40px; }ul.text-white>li>a{
-      text-decoration: none;
-      color: #ffffff;
-    }ul.text-white>li>a:hover{
-color: #ffc451;
-    } ul.text-white>li>i{ margin-right: 8px; } .social-links{
-      
-      display: flex;align-items: center;
-    } .social-links>a{
-      padding: 10px ;border-radius: 8px;background-color: #292929;
-      margin-left: 5px;
-      text-align: center;
-      display: block;
-      color: white
-    }
-     .social-links>a:hover{
-      background-color: #ffc451;
-      color: #151515
-    }
-  
-
+    div.text-white>h3,h4{ margin-bottom: 30px; } 
+    ul.text-white>li>a{text-decoration: none;color: #ffffff;}
+    ul.text-white>li>a:hover{color: #ffc451;} 
+    ul.text-white>li>i{ margin-right: 8px; } 
+    .social-links{    display: flex;align-items: center;} 
+    .social-links>a{  padding: 10px ;border-radius: 8px;background-color: #292929;  margin-left: 5px;  text-align: center;  display: block;  color: white} 
+    .social-links>a:hover{  background-color: #ffc451;  color: #151515}
   </style>
   <div class="footer-top">
     <div class="container">
@@ -55,7 +40,7 @@ color: #ffc451;
 
         <div class="col-lg-2 col-md-6 text-white">
           <h4>Liên hệ</h4>
-          <ul class="text-white">
+          <ul class="text-white list-unstyled">
             <li><i class="fa-solid fa-chevron-right text-warning"></i>
               <a href="#">Home</a></li>
             <li><i class="fa-solid fa-chevron-right text-warning"></i>
@@ -70,23 +55,23 @@ color: #ffc451;
         </div>
 
         <div class="col-lg-3 col-md-6 footer-links text-white">
-          <h4>Our Services</h4>
-          <ul class="text-white">
+          <h4>Category</h4>
+          <ul class="text-white list-unstyled">
             <li><i class="fa-solid fa-chevron-right text-warning"></i>
-              <a href="#">Web Design</a></li>
+              <a href="#">Sách văn học</a></li>
             <li><i class="fa-solid fa-chevron-right text-warning"></i>
-              <a href="#">Web Development</a></li>
+              <a href="#">Sách kinh tế</a></li>
             <li><i class="fa-solid fa-chevron-right text-warning"></i>
-              <a href="#">Product Management</a></li>
+              <a href="#">Sách chính trị</a></li>
             <li><i class="fa-solid fa-chevron-right text-warning"></i>
-              <a href="#">Marketing</a></li>
+              <a href="#">Sách tôn giáo</a></li>
             <li><i class="fa-solid fa-chevron-right text-warning"></i>
-              <a href="#">Graphic Design</a></li>
+              <a href="#">Sách thiếu nhi</a></li>
           </ul>
         </div>
 
         <div class="col-lg-4 col-md-6 footer-newsletter text-white">
-          <h4>Our Newsletter</h4>
+          <h4>Nguyễn Viết Quân</h4>
           <p>Tamen quem nulla quae legam multos aute sint culpa legam noster
             magna</p>
           <form action="" method="post">
