--- a/src/resources/views/admin/auth/loginUser.hbs
+++ b/src/resources/views/admin/auth/loginUser.hbs
@@ -69,7 +69,8 @@
           <button type="submit" class="loginBtn">Login</button>
         </div>
         <div class="input-form">
-          <p>Bạn Chưa Có Tài Khoản? <a href="/auth/viewRegister">Đăng Ký</a></p>
+          <p>Bạn Chưa Có Tài Khoản?
+            <a href="/admin/auth/viewRegister">Đăng Ký</a></p>
         </div>
       </form>
       <h3>Đăng Nhập Bằng Mạng Xã Hội</h3>
