--- a/src/resources/views/admin/auth/register.hbs
+++ b/src/resources/views/admin/auth/register.hbs
@@ -105,7 +105,7 @@ registerForm.addEventListener("submit", async (event) => {
   const data = await response.json();
   if (data.user) {
     alert(data.message);
-    location.href = "/auth/viewLogin";
+    location.href = "/";
   } else {
     alert(data.message);
   }
