--- a/src/resources/views/admin/me/list-users.hbs
+++ b/src/resources/views/admin/me/list-users.hbs
@@ -9,30 +9,7 @@
       <h3>Danh sách tài khoản</h3>
       {{!-- <a href="/admin/me/trash/users">Rác ({{deleteduser}})</a> --}}
       <div class="mt-4 d-flex flex-row align-items-center">
-        <div class="form-check">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            value=""
-            id="checkbox-all"
-          />
-          <label class="form-check-label" for="checkbox-all">
-            Chọn tất cả
-          </label>
-        </div>
-        <select
-          class="form-control form-control-sm col-lg-2 checkbox-select-option"
-          name="action"
-          required
-        >
-          <option value="">-- Chọn hành động --</option>
-          <option value="delete">Xóa</option>
-        </select>
 
-        <button
-          class="btn btn-primary btn-sm check-all-submit-btn"
-          disabled="disabled"
-        >Thực hiện</button>
       </div>
     </div>
 
@@ -40,7 +17,7 @@
       <thead>
         <tr>
           <th scope="col">#</th>
-          <th scope="col">SStt</th>
+          <th scope="col">Stt</th>
           <th scope="col">Tên tài khoản
           </th>
           <th scope="col">Email</th>
@@ -123,10 +100,14 @@
         </button>
       </div>
       <div class="modal-body">
-        Bạn có chắc chắn muốn xóa Danh sách tài khoản này không?
+        Bạn có chắc chắn muốn xóa sản phẩm này không?
       </div>
       <div class="modal-footer">
-        <button id="btn-delete-user" type="button" class="btn btn-danger">Xóa bỏ</button>
+        <button
+          id="btn-delete-user"
+          type="button"
+          class="btn btn-danger"
+        >Xóa bỏ</button>
         <button
           type="button"
           class="btn btn-primary"
@@ -142,23 +123,15 @@
 
 </form>
 <script type="module">
-  document.addEventListener('DOMContentLoaded', function(){ var userdId; var
-  deleteForm = document.forms['delete-user-form']; var containerForm =
-  document.forms['container-form'] ;var btnDeleteuser =
+  document.addEventListener('DOMContentLoaded', function(){ var userId; var deleteForm = document.forms["delete-user-form"]; var containerForm =
+  document.forms['container-form'] ;var btnDeleteUser =
   document.getElementById('btn-delete-user'); var checkboxAll =
   $('#checkbox-all');var userItemCheckbox = $('.form-check-input'); var
   checkAllSubmitBtn = $('.check-all-submit-btn');
   $('#delete-user-modal').on('show.bs.modal', function (event) { var button =
-  $(event.relatedTarget); userdId = button.data('id') ; }) ;
-  btnDeleteuser.onclick = function(){ deleteForm.action = '/users/' + userdId +
-  '?_method=delete' ; deleteForm.submit()} checkboxAll.change(function(){ var
-  isCheckedAll = $(this).prop('checked');
-  userItemCheckbox.prop('checked',isCheckedAll);renderCheckAllSubmitBtn(); });
-  userItemCheckbox.change(function(){ var isCheckedAll = userItemCheckbox.length
-  ===
-  $('.form-check-input:checked').length;checkboxAll.prop('checked',isCheckedAll);
-  renderCheckAllSubmitBtn()}); function renderCheckAllSubmitBtn(){ var
-  checkedCount = $('.form-check-input:checked').length; if(checkedCount>0){
-  checkAllSubmitBtn.attr('disabled', false) }else{
-  checkAllSubmitBtn.attr('disabled', true) } } console.log('')});
+  $(event.relatedTarget); userId = button.data('id') ; }) ;
+  btnDeleteUser.onclick = function(){ deleteForm.action = "/admin/auth/" + userId +
+  "/deleteUser?_method=delete" ; deleteForm.submit();} 
+  ;
+  });
 </script>
