--- a/src/resources/views/partials/footer.hbs
+++ b/src/resources/views/partials/footer.hbs
@@ -14,7 +14,7 @@
 
         <div class="col-lg-3 col-md-6">
           <div class="footer-info text-white">
-            <h3>Gp<span>.</span></h3>
+            <h3>Adress<span>.</span></h3>
             <p>
               131 Nguyễn Xí, Hòa Minh
               <br />
